<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereToEat</string>
    <string name="action_filter">Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">Save</string>
    <string name="cancle">Cancle</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string-array name="categories">
        <item name="all">All</item>
        <item name="maxicon">Mexican</item>
        <item name="cafe">Cafe</item>
        <item name="bar">Bar</item>
        <item name="Chinese">Chinese</item>
        <item name="indian">Indian</item>
        <item name="thai">Thai</item>
        <item name="italian">Italian</item>
        <item name="Pizza">Pizza</item>
        <item name="burger">Burger</item>
        <item name="starbucks">Starbucks</item>
    </string-array>

    <string name="RES_REF_KEY">001</string>
    <string name="RES_ID_KEY">002</string>
    <string name="RES_LOCATION_KEY">003</string>
    <string name="website_information_is_not_available_">Website information is not available!</string>
    <string name="couldnot_find_your_current_location_">Couldnot find your current location !</string>
    <string name="network_is_not_available_">Network is NOT Available!</string>
    <string name="server_is_not_available_at_this_time_">couldnot connect to server.</string>
    <string name="see_website">see Website</string>
    <string name="call">Call</string>
    <string name="get_direction">Get Direction</string>
    <string name="favorite">favorite</string>
    <string name="_0_reviews">0 Reviews</string>
    <string name="default_ratings">0.0</string>

</resources>