<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDetailviewRatings"
        style="@style/largeBoldTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/default_ratings" />

    <RatingBar
        android:id="@+id/ivRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDetailviewRatings"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:gravity="center"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/tvReviewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivRating"
        android:text="@string/_0_reviews"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        style="@style/custom_header"
        android:layout_margin="10dp"
        android:layout_below="@+id/tvReviewCount"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tglBtnFav"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            android:background="@drawable/toggle_check"
            android:contentDescription="@string/favorite"
            android:onClick="onClickFavorite"
            android:textOff=""
            android:textOn="" />

        <ImageView
            android:layout_width="1dp"
            android:background="@android:color/darker_gray"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/imgBtnSeeWebSite"
            style="@style/custom_header_linear_layout_children"
            android:contentDescription="@string/see_website"
            android:onClick="openSite"
            android:src="@drawable/ic_see_website_blue" />

        <ImageView
            android:layout_width="1dp"
            android:background="@android:color/darker_gray"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/imgBtnCall"
            style="@style/custom_header_linear_layout_children"
            android:contentDescription="@string/call"
            android:onClick="callNumber"
            android:src="@drawable/ic_call_green" />

        <ImageView
            android:layout_width="1dp"
            android:background="@android:color/darker_gray"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/imgBtnGetDirection"
            style="@style/custom_header_linear_layout_children"
            android:contentDescription="@string/get_direction"
            android:onClick="launchGoogleMaps"
            android:src="@drawable/ic_map_round" />
    </LinearLayout>

</RelativeLayout>